# stencila

./: .Rprofile  .all-contributorsrc  .appveyor.yml  .babelrc  .dockerignore  .editorconfig  .eslintrc  .eslintrc.js  .gitignore  .lintr  .npmignore  .nsprc  .parcelrc  .postcssrc  .prettierignore  .pylintrc  .sass-lint.yml  .stylelintrc  .travis.sh  .travis.yml  .~lock.test.docx#  2017-Roadtrip-Roadmap.md  404.html  AGENTS.md  AUTHORS  CHANGELOG.md  CODE_OF_CONDUCT.md  CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Gulpfile.js  HISTORY.md  IMPL-corpus.md  LICENSE  Makefile  PLAN-workflows.md  PLANNING.md  PRD-corpus.md  README.md  (+93 more)
cli/: Cargo.toml  Makefile  README.md  main.rs
cpp/: .gitignore  CMakeLists.txt  Makefile  Makefile.common  Makefile.inc  Makefile.requirements  README.md  cpp.mk  dataquery.hpp  dataset.cpp  dataset.hpp  datatable.hpp  eql.hpp  exception.hpp  variables.make  wscript
cpp/docs/: .gitignore  Doxyfile  Doxyfile.template  Makefile  doxy-header.html  doxy.css  doxy_header.html
cpp/lib/: .gitignore  Makefile
cpp/requirements/: .gitignore  Makefile  README.md  tidy-html5-src-mappedio.c-patch.diff
cpp/requires/: .gitignore  Makefile  README.md  boost.make  boost.py  cmark.make  cpr.make  jsoncpp.make  libgit2.make  libgit2.py  libzip.make  pugixml.make  pugixml.py  rapidjson-scanlime-0c69df5ac0.patch  rapidjson.make  rapidjson.py  tidy-html5-build-gmake-Makefile.patch  tidy-html5-localize-symbols.txt  tidy-html5-pull-98.patch  tidy-html5.make  tidyhtml5.py  websocketpp.make  websocketpp.py  wscript
cpp/stencila/: .gitignore  README.md  array-declaration.hpp  array-dynamic.hpp  array-static.hpp  array.hpp  arraybase-array.hpp  arraybase-dimension.hpp  arraybase-forwards.hpp  arraybase-query.hpp  arraybase.hpp  arrays.hpp  client.hpp  component-call.cpp  component-instance.cpp  component-io.cpp  component-page.hpp  component-repo.cpp  component-serve.cpp  component-snapshots.cpp  component-tests.cpp  component.cpp  component.hpp  compress.hpp  context.hpp  datacursor.hpp  dataquery-cxx.hpp  dataquery.hpp  dataset-math-aggregators.hpp  dataset-math-functions.hpp  dataset.cpp  dataset.hpp  datatable.hpp  datatype.hpp  datatypes.hpp  debug.hpp  dimension-tests.cpp  dimension.hpp  eql.hpp  exception.hpp  (+132 more)
cpp/tests/: .gitignore  Makefile  Makefile.testing  array-dynamic.cpp  array-static.cpp  array.cpp  arrays.cpp  arrayspace.cpp  boost-test-to-junit.xsl  client.cpp  component-repo.cpp  component-snapshots.cpp  component.cpp  compress.cpp  dataquery.cpp  dataset.caching.sds  dataset.cpp  datatable.cpp  dimension.cpp  formats_json.cpp  formats_xml.cpp  frame-dynamic.cpp  frame.cpp  function.cpp  git.cpp  grid.cpp  html-doc-1.html  html.cpp  http-client.cpp  http-server.cpp  hub.cpp  json.cpp  map-context.cpp  markdown.cpp  mirrors.cpp  network.cpp  print.cpp  python-context.cpp  query.cpp  r-context.cpp  (+43 more)
llm-evaluate/: Makefile  README.md  pyproject.toml  routing.json
llm-evaluate/tests/: conftest.py  test_trustbits.py
models/: README.md  pyproject.toml
node/: .eslintrc.json  .gitignore  .npmignore  Cargo.toml  Makefile  README.md  binding.gyp  bindings.js  class.hxx  class.jsx  component-extras.hpp  compress.cjs  context.hpp  context.js  convert.mts  extension.cpp  extension.hpp  index.d.ts  index.js  install.cjs  install.js  main.ts  package-lock.json  package.json  schemas.ts  sheet-extras.hpp  stencil-extras.hpp  stencila-node  stencila-node.js  test.ts  tsconfig-build.json  tsconfig.json  wrap.js
node/lib/: config.ts  index.js  index.ts  plugins.ts
node/native/: Cargo.toml
node/src/: bench.ts  bindings.d.ts  bindings.ts  client.rs  codecs.rs  config.rs  config.test.ts  config.ts  convert.bench.ts  convert.mts  convert.rs  convert.test.mjs  convert.test.ts  convert.ts  dispatch.ts  documents.rs  documents.test.ts  documents.ts  errors.rs  errors.test.ts  errors.ts  formats.rs  graphs.rs  index.ts  kernels.rs  kernels.test.ts  kernels.ts  lib.mts  lib.rs  logging.rs  logging.test.ts  logging.ts  options.ts  patches.rs  plugins.rs  plugins.test.ts  plugins.ts  prelude.rs  prelude.ts  projects.rs  (+14 more)
node/stencila-node/: .prettierignore  Cargo.toml  Makefile  README.md  compress.cjs  eslint.config.js  install.cjs  package.json  vitest.config.ts
node/stencila-plugin/: .eslintrc.json  .prettierignore  Makefile  eslint.config.js  package.json  vitest.config.ts
node/tests/: config.test.ts  context.js  convert.test.mjs  index.js  index.test.js  index.test.ts  plugins.test.ts  serve.js  sheet.js  stencil.js
python/: .gitignore  .mypy.ini  .pylintrc  Cargo.toml  MANIFEST.in  Makefile  README.md  plugin.py  pyproject.toml  pyrightconfig.json  requirements-dev.txt  setup.py  tox.ini  types.py  util.py
python/plugin/: __main__.py
python/src/: convert.rs  lib.rs
python/stencila/: Cargo.toml  Makefile  README.md  pyproject.toml
python/stencila_plugin/: Makefile  README.md  pyproject.toml
python/stencila_types/: Makefile  README.md  pyproject.toml  pyrightconfig.json
python/tests/: test_json.py  test_util.py
rs/: Cargo.toml  Makefile  README.md
rs/src/: prelude.rs  types.rs
rs/tests/: test.rs
rust/: .gitignore  Cargo.toml  Makefile  README.md  types.rs
rust/actor/: Cargo.toml
rust/agent/: Cargo.toml
rust/agent-anthropic/: Cargo.toml
rust/agent-custom/: Cargo.toml
rust/agent-ollama/: Cargo.toml
rust/agent-openai/: Cargo.toml
rust/agents/: AGENTS.md  Cargo.toml  Makefile  README.md
rust/agents-ollama/: Cargo.toml
rust/agents-openai/: Cargo.toml
rust/app/: Cargo.toml
rust/archive-utils/: Cargo.toml
rust/ask/: Cargo.toml
rust/assistant/: Cargo.toml
rust/assistant-anthropic/: Cargo.toml
rust/assistant-custom/: Cargo.toml
rust/assistant-google/: Cargo.toml
rust/assistant-mistral/: Cargo.toml
rust/assistant-ollama/: Cargo.toml
rust/assistant-openai/: Cargo.toml
rust/assistant-specialized/: Cargo.toml
rust/assistants/: Cargo.toml
rust/attractor/: Cargo.toml  Makefile  README.md
rust/auth/: Cargo.toml
rust/benches/: compile_code.rs
rust/binaries/: Cargo.toml
rust/binary-asdf/: Cargo.toml
(+19706 files in other folders)
