[workspace]
resolver = "2"
members = ["rust/*", "node", "python/stencila"]
# Exclude currently unmaintained crates to reduce lint/test compile times
exclude = ["rust/codec-polars", "rust/kernel-rhai"]

[workspace.package]
version = "2.9.0"

[workspace.dependencies]
Inflector = "0.11.4"
async-recursion = "1.1.1"
async-trait = "0.1.89"
base64 = "0.22.1"
bs58 = "0.5.1"
cached = { version = "0.56.0", features = ["async"] }
chrono = { version = "0.4.42", features = ["serde"] }
chrono-humanize = "0.2.3"
clap = { version = "4.5.51", features = ["derive", "color", "env", "wrap_help"] }
darling = "0.21.3"
derive_more = { version = "2.0.1", features = ["display", "deref", "deref_mut", "into_iterator"] }
directories = "6.0.0"
eyre = "0.6.12"
flate2 = "1.1.5"
futures = "0.3.31"
glob = "0.3.3"
governor = { version = "0.10.1", default-features = false, features = ["std"] }
ignore = "0.4.25"
headless_chrome = { version = "1.0.18", features = ["rustls"] }
indexmap = { version = "2.12.0", features = ["serde"] }
image = { version = "0.25.8", default-features = false, features = ["png", "jpeg", "gif", "tiff"] }
insta = { version = "1.43.2", features = ["json", "yaml", "redactions"] }
itertools = "0.14.0"
lightningcss = "1.0.0-alpha.68"
lru = "0.16.2"
mime = "0.3.17"
mime_guess = "2.0.5"
monostate = "1.0.2"
notify = { version = "8.2.0", default-features = false, features = ["macos_kqueue"] }
ntest = "0.9.3"
pathdiff = "0.2.3"
percent-encoding = "2.3.2"
pretty_assertions = "1.4.1"
proc-macro2 = "1.0.103"
proptest = "1.9.0"
proptest-derive = "0.7.0"
quick-xml = "0.37.5"
quote = "1.0.42"
rand = "0.9.2"
regex = "1.12.2"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "multipart", "rustls-tls", "stream"] }
roxmltree = "0.21.1"
schemars = { version = "1.1.0", features = ["indexmap2", "url2"] }
seahash = "4.1.0"
semver = { version = "1.0.27", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = { version = "1.0.145", features = ["preserve_order"] }
serde_with = "3.15.1"
serde_yaml = "0.9.34"
sha2 = "0.10"
similar = { version = "2.7.0", features = ["serde", "unicode"] }
smart-default = "0.7.1"
strsim = "0.11.1"
smol_str = "0.3.4"
strum = { version = "0.27.2", features = ["derive"] }
syn = "2.0.109"
tar = "0.4.44"
tempfile = "3.23.0"
test-log = { version = "0.2.18", default-features = false, features = ["trace"] }
textwrap = { version = "0.16.2", features = ["terminal_size"] }
thiserror = "2.0.12"
time = { version = "0.3.44", features = ["formatting"] }
tl = "0.7.8"
tokio = { version = "1.48.0", features = ["full", "tracing"] }
toml = "0.9.8"
tracing = { version = "0.1.41", features = ["log"] }
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
url = { version = "2.5.7", features = ["serde"] }
uuid = { version = "1.18.1", features = ["v4"] }
walkdir = "2.5.0"
webbrowser = "1.0.6"
which = "8.0.0"
winnow = "0.7.13"
zip = { version = "6.0.0", default-features = false, features = ["deflate", "time"] } # To reduce dependencies avoid bzip2, lzma, xz, and zstd compression which are rare for zip archive. Reinstate those if necessary

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
unwrap_used = "deny"
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "warn"
large_enum_variant = "allow"

# Reduce the amount of debug info in dev binaries. 
# Initially introduced to avoid a fatal error when running tests for the Node SDK
# seemingly caused by large addon size.
[profile.dev]
debug = 1

# Profile to reduce the binary size based on https://github.com/johnthagen/min-sized-rust
[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
