[workspace]
resolver = "2"
members = ["rust/*", "node", "python/stencila"]
# Exclude currently unmaintained crates to reduce lint/test compile times
exclude = ["rust/codec-polars", "rust/kernel-rhai"]

[workspace.package]
version = "2.12.0"

[workspace.dependencies]
Inflector = "0.11.4"
async-recursion = "1.1.1"
async-trait = "0.1.89"
base64 = "0.22.1"
bs58 = "0.5.1"
cached = { version = "0.56.0", features = ["async"] }
chrono = { version = "0.4.43", features = ["serde"] }
chrono-humanize = "0.2.3"
clap = { version = "4.5.54", features = ["derive", "color", "env", "wrap_help"] }
darling = "0.23.0"
derive_more = { version = "2.1.1", features = ["display", "deref", "deref_mut", "into_iterator"] }
directories = "6.0.0"
eyre = "0.6.12"
flate2 = "1.1.8"
futures = "0.3.31"
glob = "0.3.3"
governor = { version = "0.10.4", default-features = false, features = ["std"] }
ignore = "0.4.25"
headless_chrome = { version = "1.0.20", features = ["rustls"] }
indexmap = { version = "2.13.0", features = ["serde"] }
image = { version = "0.25.9", default-features = false, features = ["png", "jpeg", "gif", "tiff"] }
indicatif = "0.17"
insta = { version = "1.46.1", features = ["json", "yaml", "redactions"] }
itertools = "0.14.0"
lightningcss = "1.0.0-alpha.68"
lru = "0.16.3"
mime = "0.3.17"
mime_guess = "2.0.5"
monostate = "1.0.2"
notify = { version = "8.2.0", default-features = false, features = ["macos_kqueue"] }
ntest = "0.9.5"
pathdiff = "0.2.3"
percent-encoding = "2.3.2"
pretty_assertions = "1.4.1"
proc-macro2 = "1.0.105"
proptest = "1.9.0"
proptest-derive = "0.7.0"
quick-xml = "0.37.5"
quote = "1.0.43"
rand = "0.9.2"
regex = "1.12.2"
reqwest = { version = "0.13.1", default-features = false, features = ["json", "multipart", "query", "rustls", "stream"] }
roxmltree = "0.21.1"
rust-embed = { version = "8.11.0", features = ["interpolate-folder-path", "include-exclude"] }
schemars = { version = "1.2.0", features = ["indexmap2", "url2"] }
seahash = "4.1.0"
semver = { version = "1.0.27", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = { version = "1.0.149", features = ["preserve_order"] }
serde_with = "3.16.1"
serde_yaml = "0.9.34"
sha2 = "0.10"
similar = { version = "2.7.0", features = ["serde", "unicode"] }
smart-default = "0.7.1"
strsim = "0.11.1"
smol_str = "0.3.5"
strum = { version = "0.27.2", features = ["derive"] }
syn = "2.0.114"
tar = "0.4.44"
tempfile = "3.24.0"
test-log = { version = "0.2.19", default-features = false, features = ["trace"] }
textwrap = { version = "0.16.2", features = ["terminal_size"] }
thiserror = "2.0.18"
time = { version = "0.3.45", features = ["formatting"] }
tl = "0.7.8"
tokio = { version = "1.49.0", features = ["full", "tracing"] }
toml = "0.9.11+spec-1.1.0"
toml_edit = "0.24.0+spec-1.1.0"
tracing = { version = "0.1.44", features = ["log"] }
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
url = { version = "2.5.8", features = ["serde"] }
uuid = { version = "1.19.0", features = ["v4"] }
walkdir = "2.5.0"
webbrowser = "1.0.6"
which = "8.0.0"
winnow = "0.7.14"
zip = { version = "7.1.0", default-features = false, features = ["deflate", "time"] } # To reduce dependencies avoid bzip2, lzma, xz, and zstd compression which are rare for zip archive. Reinstate those if necessary

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
unwrap_used = "deny"
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "warn"
large_enum_variant = "allow"

# Reduce the amount of debug info in dev binaries. 
# Initially introduced to avoid a fatal error when running tests for the Node SDK
# seemingly caused by large addon size.
[profile.dev]
debug = 1

# Profile to reduce the binary size based on https://github.com/johnthagen/min-sized-rust
[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
