[package]
name = "stencila-cli"
version = "0.111.0"
edition = "2018"

[[bin]]
name = "stencila"
path = "main.rs"

[features]
feedback = ["ansi_term", "color-eyre", "linya"]
pretty = ["atty", "syntect", "termimad"]
view = ["rust-embed", "webbrowser"]
interact = ["ansi_term", "rustyline", "rustyline-derive"]
default = ["feedback", "pretty", "view", "interact"]

[dependencies]
ansi_term = { version = "=0.12.1", optional = true }
atty = { version = "=0.2.14", optional = true }
color-eyre = { version = "=0.5.11", optional = true }
exitcode = "=1.1.2"
linya = { version = "=0.2.1", optional = true }
rust-embed = { version = "=6.0.1", features = ["compression"], optional = true }
rustyline = { version = "=8.2.0", optional = true }
rustyline-derive = { version = "=0.5.0", optional = true }
stencila = { path = "../rust" }
structopt = { version = "=0.3.22", features = ["wrap_help"] }
syntect = { version = "=4.6.0", optional = true }
termimad = { version = "=0.14.2", optional = true }
webbrowser = { version = "=0.5.5", optional = true }
