[package]
name = "stencila-cli"
version = "0.123.0"
edition = "2018"

[[bin]]
name = "stencila"
path = "main.rs"

[features]
cli-feedback = ["ansi_term", "color-eyre", "linya"]
cli-pretty = ["atty", "syntect", "termimad"]
cli-view = ["webbrowser"]
cli-interact = ["ansi_term", "rustyline", "rustyline-derive"]
default = ["cli-feedback", "cli-pretty", "cli-view", "cli-interact"]

[dependencies]
ansi_term = { version = "=0.12.1", optional = true }
atty = { version = "=0.2.14", optional = true }
color-eyre = { version = "=0.5.11", optional = true }
exitcode = "=1.1.2"
linya = { version = "=0.2.1", optional = true }
rustyline = { version = "=9.0.0", optional = true }
rustyline-derive = { version = "=0.5.0", optional = true }
stencila = { path = "../rust/crates/stencila" }
structopt = { version = "=0.3.25", features = ["wrap_help"] }
syntect = { version = "=4.6.0", optional = true }
termimad = { version = "=0.16.4", optional = true }
urlencoding = "2.1.0"
webbrowser = { version = "=0.5.5", optional = true }
