[package]
edition = "2024"
name = "stencila-node"
version = "2.10.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
eyre = { workspace = true }
napi = { version = "3.6.1", default-features = false, features = [
    "async",
    "napi8",
] }
napi-derive = "3.4.0"
serde_json = { workspace = true }
stencila-codecs = { path = "../rust/codecs" }

[build-dependencies]
napi-build = "2.3.1"
