[package]
edition = "2024"
name = "stencila-node"
version = "2.11.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
eyre = { workspace = true }
napi = { version = "3.7.1", default-features = false, features = [
    "async",
    "napi8",
] }
napi-derive = "3.4.1"
serde_json = { workspace = true }
stencila-codecs = { path = "../rust/codecs" }

[build-dependencies]
napi-build = "2.3.1"
