[package]
edition = "2024"
license.workspace = true
repository.workspace = true
name = "stencila-node"
version = "2.15.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
eyre = { workspace = true }
napi = { version = "3.8.3", default-features = false, features = [
    "async",
    "napi8",
] }
napi-derive = "3.5.2"
serde_json = { workspace = true }
stencila-codecs = { path = "../rust/codecs" }

[build-dependencies]
napi-build = "2.3.1"
