# See https://packaging.python.org/en/latest/specifications/declaring-project-metadata/ for `project` keys

[project]
name = "stencila"
version = "2.0.0-alpha.23"
description = "Python SDK for Stencila"
readme = "README.md"
requires-python = ">=3.8"
license = "Apache-2.0"
authors = [{ name = "Nokome Bentley", email = "nokome@stencila.io" }]

keywords = [
    "programmable",
    "reproducible",
    "interactive",
    "documents",
    "python",
    "SDK",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Topic :: Software Development",
    "License :: OSI Approved :: Apache Software License",
]

dependencies = [
    "dataclasses-json==0.6.3",
    'StrEnum==0.4.15;python_version<"3.11"',
]

[project.urls]
Homepage = "https://github.com/stencila/stencila/tree/main/python#readme"
Repository = "https://github.com/stencila/stencila"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "stencila._stencila"

# The `tool.poetry` section is required to use Poetry with this `pyproject.toml`
# (the above is necessary for `maturin` to build valid wheels). Note that
# Poetry is working towards supporting `[project]` so this section should be able
# to be removed when that is completed.
# See https://github.com/python-poetry/poetry-core/pull/567

[tool.poetry]
name = "stencila"
version = "2.0.0-alpha.23"
description = "Python SDK for Stencila"
authors = ["Stencila and Contributors <hello@stencila.io>"]

[tool.poetry.dependencies]
python = "^3.8"
dataclasses-json = "0.6.3"
StrEnum = { version = "0.4.15", python = "<3.11" }

[tool.poetry.group.dev.dependencies]
black = "23.12.1"
coverage = "7.4.0"
maturin = "1.4.0"
pip-audit = "2.6.2"
pytest = "7.4.3"
pytest-asyncio = "0.23.2"
pytest-benchmark = "4.0.0"

[tool.pytest.ini_options]
python_files = ["test_*.py", "bench_*.py"]
python_functions = ["test_*", "bench_*"]
asyncio_mode = "auto"

[tool.coverage.run]
omit = [
    # Omit generated type files
    "python/stencila/types/*.py",
    # Omit tests
    "python/tests/*.py",
]
