# See https://packaging.python.org/en/latest/specifications/declaring-project-metadata/ for `project` keys

[project]
name = "stencila"
version = "2.0.0-alpha.25"
description = "Python SDK for Stencila"
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
authors = [{ name = "Nokome Bentley", email = "nokome@stencila.io" }]

keywords = [
  "programmable",
  "reproducible",
  "interactive",
  "documents",
  "python",
  "SDK",
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Education",
  "Topic :: Software Development",
  "License :: OSI Approved :: Apache Software License",
]

dependencies = [
  'StrEnum==0.4.15;python_version<"3.11"',
  "beartype==0.17.2",
  "cattrs==23.2.3",
]

[project.urls]
Homepage = "https://github.com/stencila/stencila/tree/main/python#readme"
Repository = "https://github.com/stencila/stencila"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "stencila._stencila"

# The `tool.poetry` section is required to use Poetry with this `pyproject.toml`
# (the above is necessary for `maturin` to build valid wheels). Note that
# Poetry is working towards supporting `[project]` so this section should be able
# to be removed when that is completed.
# See https://github.com/python-poetry/poetry-core/pull/567

[tool.poetry]
name = "stencila"
version = "2.0.0-alpha.25"
description = "Python SDK for Stencila"
authors = ["Stencila and Contributors <hello@stencila.io>"]
packages = [{ include = "stencila", from = "python" }]

[tool.poetry.dependencies]
python = "^3.9"
StrEnum = { version = "0.4.15", python = "<3.11" }
beartype = "0.17.2"
cattrs = "23.2.3"

[tool.poetry.group.dev.dependencies]
black = "24.3.0"
coverage = "7.4.4"
maturin = "1.5.1"
pip-audit = "2.7.2"
pytest = "7.4.4"
pytest-asyncio = "0.23.5.post1"
pytest-benchmark = "4.0.0"

[tool.pytest.ini_options]
addopts = "-s"
python_files = ["test_*.py", "bench_*.py"]
python_functions = ["test_*", "bench_*"]
asyncio_mode = "auto"

[tool.coverage.run]
omit = [
  # Omit generated type files
  "python/stencila/types/*.py",
  # Omit tests
  "python/tests/*.py",
]

[tool.ruff]
# https://docs.astral.sh/ruff/
line-length = 88
select = [
  "F",    # pyflakes
  "E",    # codestyle
  "W",    # warning
  "C90",  # complexity
  "N",    # pep-naming
  "UP",   # upgrade
  "S",    # bandit
  "B",    # bug-bear
  "A",    # builtins
  "C4",   # comprehensions
  "PIE",  # misc
  "ISC",  # literal concat
  "T20",  # print statements
  "PT",   # pytest
  "RET",  # returns
  "SIM",  # simplify
  "PTH",  # use pathlib
  "Q",    # quotes
  "PLR",  # refactor
  "PLE",  # pylint errors
  "I001", # isort
]

# ignore = [
#   "B019",   # let's not worry about this.
#   "SIM108", # Ternary not that clear (opinion!)
#   "RET504", # This seems broken to me.
#   "N812",   # Common practice.
# ]

# Automatically fixing is often premature.
unfixable = [
  "T20",  # Removes print statements
  "F841", # Removes unused variables
]

src = ['python', 'tests']

[tool.ruff.per-file-ignores]
# Ignore the import *, we need it to bring everything into the namespace for beartype.
"shortcuts.py" = ["F405"]
"utilities.py" = ["F405"]

"python/stencila/stencila_types.py" = ["E501"]
"python/tests/*.py" = ["S101"]

# Shadowing python builtins, but we don't want to break the old interface.
"convert.py" = ['A002']
# Generated files have lots of "issues".
