[package]
name = "stencila_schema"
version = "1.1.3"
authors = ["Nokome Bentley <nokome@stenci.la>"]
edition = "2018"
readme = "README.md"

[dependencies]
chrono = "0.4.19"
defaults = "0.2.0"
serde = {version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"

[dev-dependencies]
pretty_assertions = "0.7.1"
