[package]
name = "stencila-schema"
version = "1.5.3"
edition = "2018"
description = "Rust bindings for Stencila Schema"
authors = ["Nokome Bentley <nokome@stenci.la>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://schema.stenci.la"
repository = "https://github.com/stencila/schema"
keywords = ["schema", "executable", "documents"]

[dependencies]
chrono = "0.4.19"
defaults = "0.2.0"
serde = {version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"

[dev-dependencies]
pretty_assertions = "0.7.1"
